--- a/src/AppBundle/Resources/views/Mail/delivery.html.twig
+++ b/src/AppBundle/Resources/views/Mail/delivery.html.twig
@@ -75,23 +75,6 @@
                 <tr>
                     <td colspan="2" style="font-size: 0px"><br /></td>
                 </tr>
-                <tr style="background: #FFF; padding: 10px" bgcolor="#FFF">
-                    <td style="text-align: left; width: 200px; vertical-align: top" align="left" valign="top" >
-                        <span style="display: inline-block; padding: 3px; border: 1px solid #CCC; border-radius: 3px">
-                            <a href="https://medalmanah.ru/event/139?mail" target="_blank" style="color: #f00000">
-                                <img src="http://medalmanah.ru/upload/event/1468412726.jpeg" style="width: 160px">
-                            </a>
-                        </span>
-                    </td>
-                    <td style="text-align: left; font-size: 16px" align="left" >
-                        <span style="color: #777">25.08.2016 - 27.08.2016</span><br />
-                        <div><a href="https://medalmanah.ru/event/139?mail" target="_blank" style="color: #f00000"><strong>Всероссийская научно-практическая конференция с международным участием «оперативная и консервативная колопроктология: современные технологии для высокого качества жизни пациентов» и объединенный каспийский и байкальский форум по проблемам ВЗК</strong></a></div>
-                        <p style="font-size: 10pt">Общероссийская общественная организация «АССОЦИАЦИЯ КОЛОПРОКТОЛОГОВ РОССИИ» приглашает вас принять участие в работе Всероссийского Съезда колопроктологов с международным участием «Оперативная и консервативная колопроктология: современные технологии для высокого качества жизни пациентов» и Объединенного Каспийского и Байкальского форума по проблемам ВЗК».</p>
-                    </td>
-                </tr>
-                <tr>
-                    <td colspan="2" style="font-size: 0px"><br /></td>
-                </tr>
                 <tr style="background: #FFF" bgcolor="#FFF">
                     <td style="text-align: left; width: 200px; vertical-align: top" align="left" valign="top" >
                         <span style="display: inline-block; padding: 3px; border: 1px solid #CCC; border-radius: 3px">
@@ -126,18 +109,38 @@
                 <tr>
                     <td colspan="2" style="font-size: 0px"><br /></td>
                 </tr>
+
+
+
                 <tr style="background: #FFF" bgcolor="#FFF">
                     <td style="text-align: left; width: 200px; vertical-align: top" align="left" valign="top" >
                         <span style="display: inline-block; padding: 3px; border: 1px solid #CCC; border-radius: 3px">
-                            <a href="https://medalmanah.ru/event/8?mail" target="_blank" style="color: #f00000">
+                            <a href="https://medalmanah.ru/event/7?mail" target="_blank" style="color: #f00000">
                                 <img src="http://medalmanah.ru/upload/event/1464642619.jpeg" style="width: 160px">
                             </a>
                         </span>
                     </td>
                     <td style="text-align: left; font-size: 16px" align="left" >
                         <span style="color: #777">13.09.2016 - 13.09.2016</span><br />
-                        <div><a href="https://medalmanah.ru/event/8?mail" target="_blank" style="color: #f00000"><strong>Амбулаторный прием. Цикл образовательных сессий для врачей поликлиник Сессия: "Лекарственный справочник амбулаторного терапевта"</strong></a></div>
+                        <div><a href="https://medalmanah.ru/event/7?mail" target="_blank" style="color: #f00000"><strong>Амбулаторный прием. Цикл образовательных сессий для врачей поликлиник Сессия: "Лекарственный справочник амбулаторного терапевта"</strong></a></div>
                         <p style="font-size: 10pt">Уважаемые коллеги! Рады сообщить, что участники сессии получат сертификат с образовательными кредитами по системе повышения квалификации в рамках НМО (6 кредитов), которые будут учитываться при аккредитации специалистов.</p>
+                    </td>
+                </tr>
+                <tr>
+                    <td colspan="2" style="font-size: 0px"><br /></td>
+                </tr>
+                <tr style="background: #FFF; padding: 10px" bgcolor="#FFF">
+                    <td style="text-align: left; width: 200px; vertical-align: top" align="left" valign="top" >
+                        <span style="display: inline-block; padding: 3px; border: 1px solid #CCC; border-radius: 3px">
+                            <a href="https://medalmanah.ru/event/rossijskij_natsionalnyj_kongress_kardiologov_2016?mail" target="_blank" style="color: #f00000">
+                                <img src="http://medalmanah.ru/upload/event/1469648192.png" style="width: 160px">
+                            </a>
+                        </span>
+                    </td>
+                    <td style="text-align: left; font-size: 16px" align="left" >
+                        <span style="color: #777">20.09.2016 - 23.09.2016</span><br />
+                        <div><a href="https://medalmanah.ru/event/rossijskij_natsionalnyj_kongress_kardiologov_2016?mail" target="_blank" style="color: #f00000"><strong>Российский национальный конгресс кардиологов 2016</strong></a></div>
+                        <p style="font-size: 10pt">Уважаемые коллеги! Общероссийская общественная организация «Российское кардиологическое общество» приглашает Вас принять участие в Российском национальном конгрессе кардиологов.</p>
                     </td>
                 </tr>
                 <tr>
@@ -176,15 +179,15 @@
                 <tr style="background: #FFF" bgcolor="#FFF">
                     <td style="text-align: left; width: 200px; vertical-align: top" align="left" valign="top" >
                         <span style="display: inline-block; padding: 3px; border: 1px solid #CCC; border-radius: 3px">
-                            <a href="https://medalmanah.ru/news/redkoe_geneticheskoe_zabolevanie_i_postojannyj_golod_?mail" target="_blank" style="color: #F00000">
-                                <img src="http://medalmanah.ru/upload/publication/1470603226.png" style="width: 160px">
+                            <a href="https://medalmanah.ru/publications/articles/biomarkery_insulta_?mail" target="_blank" style="color: #F00000">
+                                <img src="https://medalmanah.ru/upload/publication/1472418351.png" style="width: 160px">
                             </a>
                         </span>
                     </td>
                     <td style="text-align: left; font-size: 16px" align="left" >
-                        <span style="color: #777">07.08.2016</span><br />
-                        <div><strong><a href="https://medalmanah.ru/news/redkoe_geneticheskoe_zabolevanie_i_postojannyj_golod_?mail" target="_blank" style="color: #F00000">Редкое генетическое заболевание и постоянный голод</a></strong></div>
-                        <p>Стив и Эдди Ахерн - братья близнецы. Они родились с редким генетическим заболеванием - синдромом Прадера-Вилли(СПВ). Из-за данного синдрома мальчики постоянно ощущают чувство голода. Братья выглядят старше, чем есть, хотя им всего по одиннадцать лет, а также страдают избыточным весом.</p>
+                        <span style="color: #777">29.08.2016</span><br />
+                        <div><strong><a href="https://medalmanah.ru/publications/articles/biomarkery_insulta_?mail" target="_blank" style="color: #F00000">Биомаркеры инсульта</a></strong></div>
+                        <p>Люди с высоким уровнем содержания четырёх биомаркеров в крови могут быть более склонны к развитию инсульта, чем люди с низким уровнем биомаркеров, согласно данным, опубликованным в журнале Американской академии неврологии.</p>
                     </td>
                 </tr>
                 <tr>
@@ -194,16 +197,16 @@
                 <tr style="background: #FFF" bgcolor="#FFF">
                     <td style="text-align: left; width: 200px; vertical-align: top" align="left" valign="top" >
                         <span style="display: inline-block; padding: 3px; border: 1px solid #CCC; border-radius: 3px">
-                            <a href="https://medalmanah.ru/news/novyj_metod_diagnostiki_septieskogo_porazhenija_poek?mail" target="_blank" style="color: #F00000">
-                                <img src="http://medalmanah.ru/upload/publication/1470500186.png" style="width: 160px">
+                            <a href="https://medalmanah.ru/publications/news/prostoj_test_diagnostiki_tuberkuleza_?mail" target="_blank" style="color: #F00000">
+                                <img src="https://medalmanah.ru/upload/publication/1472418043.png" style="width: 160px">
                             </a>
                         </span>
                     </td>
                     <td style="text-align: left; font-size: 16px" align="left" >
 
-                        <span style="color: #777">30.07.2016</span><br />
-                        <div><a href="https://medalmanah.ru/news/novyj_metod_diagnostiki_septieskogo_porazhenija_poek?mail" target="_blank" style="color: #F00000"><strong>Новый метод диагностики септического поражения почек</strong></a></div>
-                        <p>Мельбурнский учёный Югиш Ланкадева (Yugeesh Lankadeva) обнаружил, что приводит к повреждению почек и как оценить данное поражение при помощи анализа мочи. Новая техника способна предупредить о септической почке до того, как она приведет к нарушениям, которые опасны для жизни.</p>
+                        <span style="color: #777">28.08.2016</span><br />
+                        <div><a href="https://medalmanah.ru/publications/news/prostoj_test_diagnostiki_tuberkuleza_?mail" target="_blank" style="color: #F00000"><strong>Простой тест диагностики туберкулеза</strong></a></div>
+                        <p>Туберкулез - один из самых больших бичей среди инфекционных заболеваний в мире, от которого погибает около 2 млн. человек в год. Как известно, огромное количество больных туберкулезом проживает в экономически неразвитых странах, там, где плохо развита система здравоохранения.</p>
                     </td>
                 </tr>
                 <tr>
@@ -213,15 +216,33 @@
                 <tr style="background: #FFF" bgcolor="#FFF">
                     <td style="text-align: left; width: 200px; vertical-align: top" align="left" valign="top" >
                         <span style="display: inline-block; padding: 3px; border: 1px solid #CCC; border-radius: 3px">
-                            <a href="https://medalmanah.ru/news/mini_mozg_dlja_issledovanij?mail" target="_blank" style="color: #F00000">
-                                <img src="http://medalmanah.ru/upload/publication/1469998154.png" style="width: 160px">
+                            <a href="https://medalmanah.ru/publications/news/pribor_dlja_diagnostiki_zabolevanij_uha?mail" target="_blank" style="color: #F00000">
+                                <img src="https://medalmanah.ru/upload/publication/1472116058.png" style="width: 160px">
                             </a>
                         </span>
                     </td>
                     <td style="text-align: left; font-size: 16px" align="left" >
-                        <span style="color: #777">31.07.2016</span><br />
-                        <div><a href="https://medalmanah.ru/news/mini_mozg_dlja_issledovanij?mail" target="_blank" style="color: #F00000"><strong>Мини-мозг для исследований</strong></a></div>
-                        <p>Ученые из Сингапура сделали огромный рывок в науке - вырастив мини-мозг в лаборатории. Эти мини версии человеческого среднего мозга позволят исследователям в полном объеме изучить болезнь Паркинсона, а также иные заболевания, связанные поражениями мозга.</p>
+                        <span style="color: #777">25.08.2016</span><br />
+                        <div><a href="https://medalmanah.ru/publications/news/pribor_dlja_diagnostiki_zabolevanij_uha?mail" target="_blank" style="color: #F00000"><strong>Прибор для диагностики заболеваний уха</strong></a></div>
+                        <p>Новое устройство, разработанное исследователями из Массачусетского технологического института (MIT) и врачами из Детского медицинского центра в Коннектикуте(Connecticut Children's Medical Center ), способно улучшить диагностику заболеваний уха. Это может сократить постановку неправильных диагнозов и назначения ненужных антибиотиков.</p>
+                    </td>
+                </tr>
+                <tr>
+                    <td colspan="2" style="font-size: 0px"><br /></td>
+                </tr>
+
+                <tr style="background: #FFF" bgcolor="#FFF">
+                    <td style="text-align: left; width: 200px; vertical-align: top" align="left" valign="top" >
+                        <span style="display: inline-block; padding: 3px; border: 1px solid #CCC; border-radius: 3px">
+                            <a href="https://medalmanah.ru/publications/news/insulin_v_tabletke_?mail" target="_blank" style="color: #F00000">
+                                <img src="https://medalmanah.ru/upload/publication/1472112915.png" style="width: 160px">
+                            </a>
+                        </span>
+                    </td>
+                    <td style="text-align: left; font-size: 16px" align="left" >
+                        <span style="color: #777">25.08.2016</span><br />
+                        <div><a href="https://medalmanah.ru/publications/news/insulin_v_tabletke_?mail" target="_blank" style="color: #F00000"><strong>Инсулин в таблетке</strong></a></div>
+                        <p>Каждый день миллионы людей с диабетом должны вводить себе инъекции инсулина, чтобы контролировать уровень сахара в крови. Уже давно учёные пытаются создать инсулин, благодаря которому будет возможность отказаться от уколов</p>
                     </td>
                 </tr>
                 <tr>
