--- a/src/AppBundle/Resources/views/Publication/publication.item.html.twig
+++ b/src/AppBundle/Resources/views/Publication/publication.item.html.twig
@@ -50,7 +50,7 @@
     </div>
 
     <div class="hidden">
-        Автор: <span itemprop="author">{{ publication.author.name }}</span>
+        <noindex>Автор: <span itemprop="author">{{ publication.author.name }}</span></noindex>
         <div itemprop="publisher" itemscope itemtype="http://schema.org/Organization">
             <div itemprop="logo" itemscope itemtype="http://schema.org/ImageObject">
                 <meta itemprop="url" content="https://medalmanah.ru{{ asset('bundles/app/images/logo.png') }}">
