--- a/src/AppBundle/Resources/views/layout.html.twig
+++ b/src/AppBundle/Resources/views/layout.html.twig
@@ -46,10 +46,10 @@
         {% endstylesheets %}
 
         {#{% if app.request.attributes.get('_route') != 'homepage' %}#}
-            {#<link rel="stylesheet" href="{{ asset('bundles/app/less/menu.css') }}">#}
-            {#{% stylesheets "@AppBundle/Resources/public/less/menu.less" %}#}
-            {#<link href="{{ asset_url }}" type="text/css" rel="stylesheet" media="all" />#}
-            {#{% endstylesheets %}#}
+        {#<link rel="stylesheet" href="{{ asset('bundles/app/less/menu.css') }}">#}
+        {#{% stylesheets "@AppBundle/Resources/public/less/menu.less" %}#}
+        {#<link href="{{ asset_url }}" type="text/css" rel="stylesheet" media="all" />#}
+        {#{% endstylesheets %}#}
         {#{% endif %}#}
 
     {% endblock %}
@@ -151,9 +151,9 @@
                         {#<a target="_blank" href="https://www.youtube.com/channel/UCgS0JAUqUpDojH6rIDXGfZA"><img src="{{ asset('bundles/app/images/icons/gp.png') }}" class="social-icon"></a>#}
                         {#<a target="_blank" href="http://ok.ru/group/57034519412770"><img src="{{ asset('bundles/app/images/icons/od.png') }}" class="social-icon"></a>#}
                         {#<img src="{{ asset('bundles/app/images/icons/icons.png') }}">#}
-                            <a href="https://new.vk.com/medalmanah" target="_blank"><img src="{{ asset('bundles/app/images/icons/icons_1.png') }}" alt="ВКонтакте"></a>
-                            <a href="https://twitter.com/medalmanah_ru" target="_blank"><img src="{{ asset('bundles/app/images/icons/tw.png') }}" alt="twitter" style="width: 39px"></a>
-                            <a href="https://www.facebook.com/medalmanah" target="_blank"><img src="{{ asset('bundles/app/images/icons/icons_3.png') }}" alt="Facebook"></a>
+                        <a href="https://new.vk.com/medalmanah" target="_blank"><img src="{{ asset('bundles/app/images/icons/icons_1.png') }}" alt="ВКонтакте"></a>
+                        <a href="https://twitter.com/medalmanah_ru" target="_blank"><img src="{{ asset('bundles/app/images/icons/tw.png') }}" alt="twitter" style="width: 39px"></a>
+                        <a href="https://www.facebook.com/medalmanah" target="_blank"><img src="{{ asset('bundles/app/images/icons/icons_3.png') }}" alt="Facebook"></a>
                     </div>
                 </div>
                 <div class="contacts row">
@@ -198,7 +198,7 @@
 {% block modal %}{% endblock %}
 {% include "@App/Modal/login.html.twig" %}
 <!--noindex-->
-    {% include "@App/banner.html.twig" %}
+{% include "@App/banner.html.twig" %}
 <!--/noindex-->
 {% include "@App/counter.html.twig" %}
 
@@ -226,6 +226,32 @@
             });
         });
     </script>
+    {% if is_granted('IS_AUTHENTICATED_ANONYMOUSLY') %}
+        <script src="{{ asset('assets/vendor/jquery.cookie/jquery.cookie.js') }}"></script>
+        <script>
+            $(document).ready(function () {
+                if ($.cookie('customBannerOne') == undefined){
+                    $.cookie('customBannerOne',0, { expires: 1, path: '/' });
+                }
+                console.log($.cookie('customBannerOne'));
+                if ($.cookie('customBannerOnePage') == undefined){
+                    $.cookie('customBannerOnePage',0, { expires: 1, path: '/' });
+                }
+
+                if ($.cookie('customBannerOne') == 0){
+                    var page = parseInt($.cookie('customBannerOnePage'))+1;
+                    $.cookie('customBannerOnePage', page);
+
+                    if (page >= 3){
+                        $.cookie('customBannerOne',1);
+                        $.cookie('customBannerOnePage', 0);
+                        $('#custum-banner').fadeIn();
+                    }
+                }
+
+            });
+        </script>
+    {% endif %}
 {% endblock %}
 </body>
 </html>
