--- a/src/AppBundle/Resources/views/layout.html.twig
+++ b/src/AppBundle/Resources/views/layout.html.twig
@@ -54,19 +54,19 @@
 
     {% endblock %}
     {% block javascript %}
-        <script type="text/js" src="{{ asset('bundles/fosjsrouting/js/router.js') }}"></script>
-        <script type="text/js" src="{{ path('fos_js_routing_js', {'callback': 'fos.Router.setData'}) }}"></script>
-        <script type="text/js" src="{{ asset('assets/vendor/jquery/dist/jquery.min.js') }}"></script>
-        <script type="text/js" src="{{ asset('assets/vendor/bootstrap/dist/js/bootstrap.min.js') }}"></script>
-        <script type="text/js" src="{{ asset('assets/vendor/owl.carousel/dist/owl.carousel.min.js') }}"></script>
-        <script type="text/js" src="{{ asset('assets/vendor/chosen/chosen.jquery.min.js') }}"></script>
-        <script type="text/js" src="{{ asset('assets/vendor/bootstrap-multiselect/dist/js/bootstrap-multiselect.js') }}"></script>
+        <script  src="{{ asset('bundles/fosjsrouting/js/router.js') }}"></script>
+        <script  src="{{ path('fos_js_routing_js', {'callback': 'fos.Router.setData'}) }}"></script>
+        <script  src="{{ asset('assets/vendor/jquery/dist/jquery.min.js') }}"></script>
+        <script  src="{{ asset('assets/vendor/bootstrap/dist/js/bootstrap.min.js') }}"></script>
+        <script  src="{{ asset('assets/vendor/owl.carousel/dist/owl.carousel.min.js') }}"></script>
+        <script  src="{{ asset('assets/vendor/chosen/chosen.jquery.min.js') }}"></script>
+        <script  src="{{ asset('assets/vendor/bootstrap-multiselect/dist/js/bootstrap-multiselect.js') }}"></script>
 
-        <script type="text/js" src="{{ asset('assets/vendor/jquery-mask-plugin/dist/jquery.mask.min.js') }}"></script>
+        <script  src="{{ asset('assets/vendor/jquery-mask-plugin/dist/jquery.mask.min.js') }}"></script>
 
-        <script type="text/js" src="{{ asset('assets/vendor/hinclude/hinclude.js') }}"></script>
+        <script  src="{{ asset('assets/vendor/hinclude/hinclude.js') }}"></script>
 
-        <script type="text/js" src="{{ asset('bundles/app/js/main.js') }}"></script>
+        <script  src="{{ asset('bundles/app/js/main.js') }}"></script>
 
         <script>
             $(document).ready(function() {
@@ -78,7 +78,7 @@
             });
         </script>
         {% if is_granted('IS_AUTHENTICATED_ANONYMOUSLY') %}
-        <script type="text/js" src="{{ asset('assets/vendor/jquery.cookie/jquery.cookie.js') }}"></script>
+        <script  src="{{ asset('assets/vendor/jquery.cookie/jquery.cookie.js') }}"></script>
         <script>
             $(document).ready(function () {
                 if ($.cookie('customBannerOne') == undefined){
