--- a/app/Resources/FOSUserBundle/views/Registration/confirmed.html.twig
+++ b/app/Resources/FOSUserBundle/views/Registration/confirmed.html.twig
@@ -1,9 +1,15 @@
 {% extends '@FOSUser/fos_layout.html.twig' %}
 
 {% block fos_user_content %}
-	<div class="email-confirm">
-	  <div class="container"> <i class="img-confirm"></i>
-		  <div class="alert alert-info">Подтверждление почты успешно. Приятной работы.</div>
-	  </div>
+	<div class="panel-tab-body">
+		<div class="row">
+			<div class="col-xs-12 col-sm-8 col-sm-offset-2">
+				<div class="email-confirm">
+					<div class="container"> <i class="img-confirm"></i>
+						<div class="alert alert-info">Подтверждление почты успешно. Приятной работы.</div>
+					</div>
+				</div>
+			</div>
+		</div>
 	</div>
 {% endblock fos_user_content %}
