--- a/app/Resources/FOSUserBundle/views/Registration/confirmed.html.twig
+++ b/app/Resources/FOSUserBundle/views/Registration/confirmed.html.twig
@@ -5,7 +5,7 @@
 		<div class="row">
 			<div class="col-xs-12 col-sm-8 col-sm-offset-2">
 				<div class="email-confirm">
-					<div class="container"> <i class="img-confirm"></i>
+					<div class=""> <i class="img-confirm"></i>
 						<div class="alert alert-info">Подтверждление почты успешно. Приятной работы.</div>
 					</div>
 				</div>
