--- a/src/AppBundle/Resources/views/Calculator/list.html.twig
+++ b/src/AppBundle/Resources/views/Calculator/list.html.twig
@@ -16,7 +16,7 @@
     {#http://klinrek.ru/calcs/#}
     <div class="row">
         <ul class="list-group">
-            <li class="list-group-item">Индекс массы тела</li>
+            <li class="list-group-item"><a href="{{ path('index_massy_tela') }}">Индекс массы тела</a></li>
             <li class="list-group-item">Расчет идеальной массы тела</li>
             <li class="list-group-item"><a href="{{ path('ocenka_clirensa_creatinina') }}">Оценка клиренса креатинина (взрослые)</a></li>
             <li class="list-group-item">Оценка клиренса креатинина (дети)</li>
@@ -24,7 +24,7 @@
             <li class="list-group-item">Скорость глубочковой фильтрации по MDRD</li>
             <li class="list-group-item">Шкала комы Глазко</li>
             <li class="list-group-item">Шкала CH2DS2VASc для оценки риска инсульта при мерцательной артимии</li>
-            <li class="list-group-item">Шкала SCORE</li>
+            <li class="list-group-item"><a href="{{ path('shkala_score') }}">Шкала SCORE</a></li>
             <li class="list-group-item">Критерий Велла для оценки вероятности ТЭЛА</li>
         </ul>
 
