--- a/src/AppBundle/Resources/views/sitemap.html.twig
+++ b/src/AppBundle/Resources/views/sitemap.html.twig
@@ -61,6 +61,16 @@
         <priority>1.0</priority>
     </url>
     <url>
+        <loc>https://medalmanah.ru/calculators/shkala-score</loc>
+        <lastmod>2016-09-07T12:24:14+01:00</lastmod>
+        <priority>1.0</priority>
+    </url>
+    <url>
+        <loc>https://medalmanah.ru/calculators/index-massy-tela</loc>
+        <lastmod>2016-09-07T12:24:14+01:00</lastmod>
+        <priority>1.0</priority>
+    </url>
+    <url>
         <loc>https://medalmanah.ru/feedback</loc>
         <lastmod>2016-07-14T12:24:14+01:00</lastmod>
         <priority>1.0</priority>
