--- a/src/AppBundle/Resources/public/less/common.less
+++ b/src/AppBundle/Resources/public/less/common.less
@@ -890,3 +890,6 @@ nav .navbar-nav li.active a:hover{
     margin: 0;
     font-weight: bold;
 }
+.calendars div ul li{
+    margin-bottom: 10px;
+}
