--- a/src/AppBundle/Resources/public/less/common.less
+++ b/src/AppBundle/Resources/public/less/common.less
@@ -892,4 +892,6 @@ nav .navbar-nav li.active a:hover{
 }
 .calendars div ul li{
     margin-bottom: 10px;
+    border-bottom: 1px solid #ddd;
+    padding-bottom: 10px;
 }
