--- a/src/AppBundle/Resources/views/Mail/delivery.html.twig
+++ b/src/AppBundle/Resources/views/Mail/delivery.html.twig
@@ -35,7 +35,7 @@
             <table cellpadding="0" cellspacing="0" style="width: 100%;" width="100%">
                 <tr>
                     <td style="text-align: justify; font-size: 16px; background: #FFF; padding: 0 30px" align="left" colspan="2" bgcolor="#FFF">
-                        &nbsp;&nbsp;&nbsp;&nbsp;Уважаемый Коллега! рады представить Вам портал, на котором собранны практически
+                        &nbsp;&nbsp;&nbsp;&nbsp;Уважаемый Коллега! рады представить Вам портал, на котором собраны практически
                         все предстоящие
                         события мира медицины как в России, так и в других странах. Мы стараемся анонсировать и осветить
                         каждое мероприятие, которое может быть Вам интересно. Также на нашем портале Вы сможете ознакомиться
