--- a/src/AppBundle/Resources/views/Mail/delivery.html.twig
+++ b/src/AppBundle/Resources/views/Mail/delivery.html.twig
@@ -78,23 +78,6 @@
                 <tr style="background: #FFF" bgcolor="#FFF">
                     <td style="text-align: left; width: 200px; vertical-align: top" align="left" valign="top" >
                         <span style="display: inline-block; padding: 3px; border: 1px solid #CCC; border-radius: 3px">
-                            <a href="https://medalmanah.ru/event/140?mail" target="_blank" style="color: #f00000">
-                                <img src="http://medalmanah.ru/upload/event/1468414493.jpeg" style="width: 160px">
-                            </a>
-                        </span>
-                    </td>
-                    <td style="text-align: left; font-size: 16px" align="left" >
-                        <span style="color: #777">07.09.2016 - 07.09.2016</span><br />
-                        <div><a href="https://medalmanah.ru/event/140?mail" target="_blank" style="color: #f00000"><strong>Межрегиональная тематическая конференция "Современные подходы к лечению критической ишемии нижних конечностей"т</strong></a></div>
-                        <p style="font-size: 10pt">Конференция посвящена современным способам хирургического и медикаментозного лечения критической ишемии нижних конечностей различного генеза.</p>
-                    </td>
-                </tr>
-                <tr>
-                    <td colspan="2" style="font-size: 0px"><br /></td>
-                </tr>
-                <tr style="background: #FFF" bgcolor="#FFF">
-                    <td style="text-align: left; width: 200px; vertical-align: top" align="left" valign="top" >
-                        <span style="display: inline-block; padding: 3px; border: 1px solid #CCC; border-radius: 3px">
                             <a href="https://medalmanah.ru/event/8?mail" target="_blank" style="color: #f00000">
                                 <img src="http://medalmanah.ru/upload/event/1464645318.png" style="width: 160px">
                             </a>
@@ -146,6 +129,24 @@
                 <tr>
                     <td colspan="2" style="font-size: 0px"><br /></td>
                 </tr>
+                <tr style="background: #FFF" bgcolor="#FFF">
+                    <td style="text-align: left; width: 200px; vertical-align: top" align="left" valign="top" >
+                        <span style="display: inline-block; padding: 3px; border: 1px solid #CCC; border-radius: 3px">
+                            <a href="https://medalmanah.ru/event/mezhdunarodnyj_kongress_i_5_ja_nauchno_prakticheskaja_shkola_iasgo_dostizhenija_sovremennoj_gepatopankreatobiliarnoj_hirurgii_hirurgii_pischevaritelnogo_trakta_i_transplantologii?mail" target="_blank" style="color: #f00000">
+                                <img src="https://medalmanah.ru/upload/event/1468421381.png" style="width: 160px">
+                            </a>
+                        </span>
+                    </td>
+                    <td style="text-align: left; font-size: 16px" align="left" >
+                        <span style="color: #777">23.09.2016 - 24.09.2016</span><br />
+                        <div><a href="https://medalmanah.ru/event/mezhdunarodnyj_kongress_i_5_ja_nauchno_prakticheskaja_shkola_iasgo_dostizhenija_sovremennoj_gepatopankreatobiliarnoj_hirurgii_hirurgii_pischevaritelnogo_trakta_i_transplantologii?mail" target="_blank" style="color: #f00000"><strong>Международный конгресс и 5-я Научно-практическая школа IASGO “Достижения современной гепатопанкреатобилиарной хирургии, хирургии пищеварительного тракта и трансплантологии”</strong></a></div>
+                        <p style="font-size: 10pt">Мероприятие пройдет при поддержке Международной ассоциации хирургов, гастроэнтерологов и онкологов (IASGO) и Министерства здравоохранения Российской Федерации.
+                            Конгресс пройдет при активном участии российских и зарубежных лидеров хирургии, трансплантологии, онкологии, лучевой диагностики, реаниматологии.</p>
+                    </td>
+                </tr>
+                <tr>
+                    <td colspan="2" style="font-size: 0px"><br /></td>
+                </tr>
             </table>
         </td>
     </tr>
@@ -179,15 +180,16 @@
                 <tr style="background: #FFF" bgcolor="#FFF">
                     <td style="text-align: left; width: 200px; vertical-align: top" align="left" valign="top" >
                         <span style="display: inline-block; padding: 3px; border: 1px solid #CCC; border-radius: 3px">
-                            <a href="https://medalmanah.ru/publications/articles/biomarkery_insulta_?mail" target="_blank" style="color: #F00000">
-                                <img src="https://medalmanah.ru/upload/publication/1472418351.png" style="width: 160px">
+                            <a href="https://medalmanah.ru/publications/news/novyj_mehanizm_dejstvija_aspirina?mail" target="_blank" style="color: #F00000">
+                                <img src="https://medalmanah.ru/upload/publication/1473281665.png" style="width: 160px">
                             </a>
                         </span>
                     </td>
                     <td style="text-align: left; font-size: 16px" align="left" >
                         <span style="color: #777">29.08.2016</span><br />
-                        <div><strong><a href="https://medalmanah.ru/publications/articles/biomarkery_insulta_?mail" target="_blank" style="color: #F00000">Биомаркеры инсульта</a></strong></div>
-                        <p>Люди с высоким уровнем содержания четырёх биомаркеров в крови могут быть более склонны к развитию инсульта, чем люди с низким уровнем биомаркеров, согласно данным, опубликованным в журнале Американской академии неврологии.</p>
+                        <div><strong><a href="https://medalmanah.ru/publications/news/novyj_mehanizm_dejstvija_aspirina?mail" target="_blank" style="color: #F00000">Новый механизм действия аспирина</a></strong></div>
+                        <p>Способность аспирина уменьшать риск развития сердечно - сосудистых заболеваний, рака толстой
+                            кишки, а также действовать, как обезболивающее средство, использовалось в медицине уже больше 100 лет.</p>
                     </td>
                 </tr>
                 <tr>
@@ -197,16 +199,16 @@
                 <tr style="background: #FFF" bgcolor="#FFF">
                     <td style="text-align: left; width: 200px; vertical-align: top" align="left" valign="top" >
                         <span style="display: inline-block; padding: 3px; border: 1px solid #CCC; border-radius: 3px">
-                            <a href="https://medalmanah.ru/publications/news/prostoj_test_diagnostiki_tuberkuleza_?mail" target="_blank" style="color: #F00000">
-                                <img src="https://medalmanah.ru/upload/publication/1472418043.png" style="width: 160px">
+                            <a href="https://medalmanah.ru/publications/news/otkrytie_daet_nadezhdu_na_lechenie_bolezni_krona?mail" target="_blank" style="color: #F00000">
+                                <img src="https://medalmanah.ru/upload/publication/1473164927.png" style="width: 160px">
                             </a>
                         </span>
                     </td>
                     <td style="text-align: left; font-size: 16px" align="left" >
 
                         <span style="color: #777">28.08.2016</span><br />
-                        <div><a href="https://medalmanah.ru/publications/news/prostoj_test_diagnostiki_tuberkuleza_?mail" target="_blank" style="color: #F00000"><strong>Простой тест диагностики туберкулеза</strong></a></div>
-                        <p>Туберкулез - один из самых больших бичей среди инфекционных заболеваний в мире, от которого погибает около 2 млн. человек в год. Как известно, огромное количество больных туберкулезом проживает в экономически неразвитых странах, там, где плохо развита система здравоохранения.</p>
+                        <div><a href="https://medalmanah.ru/publications/news/otkrytie_daet_nadezhdu_na_lechenie_bolezni_krona?mail" target="_blank" style="color: #F00000"><strong>Открытие дает надежду на лечение болезни Крона</strong></a></div>
+                        <p>Учёные из Университета Британской Колумбии (University of British Columbia) сделали открытие, которое может привести к лечению осложнений болезни Крона.</p>
                     </td>
                 </tr>
                 <tr>
@@ -216,15 +218,15 @@
                 <tr style="background: #FFF" bgcolor="#FFF">
                     <td style="text-align: left; width: 200px; vertical-align: top" align="left" valign="top" >
                         <span style="display: inline-block; padding: 3px; border: 1px solid #CCC; border-radius: 3px">
-                            <a href="https://medalmanah.ru/publications/news/pribor_dlja_diagnostiki_zabolevanij_uha?mail" target="_blank" style="color: #F00000">
-                                <img src="https://medalmanah.ru/upload/publication/1472116058.png" style="width: 160px">
+                            <a href="https://medalmanah.ru/publications/news/gumannost_i_evtanazija?mail" target="_blank" style="color: #F00000">
+                                <img src="https://medalmanah.ru/upload/publication/1473119242.png" style="width: 160px">
                             </a>
                         </span>
                     </td>
                     <td style="text-align: left; font-size: 16px" align="left" >
                         <span style="color: #777">25.08.2016</span><br />
-                        <div><a href="https://medalmanah.ru/publications/news/pribor_dlja_diagnostiki_zabolevanij_uha?mail" target="_blank" style="color: #F00000"><strong>Прибор для диагностики заболеваний уха</strong></a></div>
-                        <p>Новое устройство, разработанное исследователями из Массачусетского технологического института (MIT) и врачами из Детского медицинского центра в Коннектикуте(Connecticut Children's Medical Center ), способно улучшить диагностику заболеваний уха. Это может сократить постановку неправильных диагнозов и назначения ненужных антибиотиков.</p>
+                        <div><a href="https://medalmanah.ru/publications/news/gumannost_i_evtanazija?mail" target="_blank" style="color: #F00000"><strong>Гуманность и эвтаназия</strong></a></div>
+                        <p>Уполномоченный по правам человека в Российской Федерации Татьяна Москалькова сделала заявление о том, что считает эвтаназию гуманной.</p>
                     </td>
                 </tr>
                 <tr>
@@ -234,15 +236,15 @@
                 <tr style="background: #FFF" bgcolor="#FFF">
                     <td style="text-align: left; width: 200px; vertical-align: top" align="left" valign="top" >
                         <span style="display: inline-block; padding: 3px; border: 1px solid #CCC; border-radius: 3px">
-                            <a href="https://medalmanah.ru/publications/news/insulin_v_tabletke_?mail" target="_blank" style="color: #F00000">
-                                <img src="https://medalmanah.ru/upload/publication/1472112915.png" style="width: 160px">
+                            <a href="https://medalmanah.ru/publications/news/obnaruzheno_tri_podtipa_raka_pischevoda?mail" target="_blank" style="color: #F00000">
+                                <img src="https://medalmanah.ru/upload/publication/1473107836.png" style="width: 160px">
                             </a>
                         </span>
                     </td>
                     <td style="text-align: left; font-size: 16px" align="left" >
                         <span style="color: #777">25.08.2016</span><br />
-                        <div><a href="https://medalmanah.ru/publications/news/insulin_v_tabletke_?mail" target="_blank" style="color: #F00000"><strong>Инсулин в таблетке</strong></a></div>
-                        <p>Каждый день миллионы людей с диабетом должны вводить себе инъекции инсулина, чтобы контролировать уровень сахара в крови. Уже давно учёные пытаются создать инсулин, благодаря которому будет возможность отказаться от уколов</p>
+                        <div><a href="https://medalmanah.ru/publications/news/obnaruzheno_tri_podtipa_raka_pischevoda?mail" target="_blank" style="color: #F00000"><strong>Обнаружено три подтипа рака пищевода</strong></a></div>
+                        <p>Учёные обнаружили, что рак пищевода можно разделить на три различных подтипа. Это открытие, опубликованное в Nature Genetics, может помочь найти препараты, способные действовать на слабые места в каждом подтипе, повышая эффективность лечения и выживаемость пациентов.</p>
                     </td>
                 </tr>
                 <tr>
