--- a/src/AppBundle/Resources/views/Mail/delivery.html.twig
+++ b/src/AppBundle/Resources/views/Mail/delivery.html.twig
@@ -12,7 +12,7 @@
             <table cellpadding="0" cellspacing="0" style="width: 100%; padding: 0 30px" width="100%">
                 <tr>
                     <td style="text-align: center; font-size: 20px" align="center">
-                        <a href="https://medalmanah.ru{{ path('homepage') }}?mail" style="color: #444; text-decoration: none">ПРЕДСТОЯЩИЕ СОБЫТИЯ В МИРЕ <br />МЕДИЦИНЫ</a>
+                        <a href="https://medalmanah.ru{{ path('homepage') }}?mail" style="color: #444; text-decoration: none">Предстоящие события в мире <br />медицины</a>
                     </td>
                     <td style="text-align: right" align="right">
                         <a href="https://medalmanah.ru{{ path('homepage') }}?mail"><img src="https://medalmanah.ru{{ asset('bundles/app/images/logo.png') }}" style="width: 150px" width="150"></a>
