--- a/src/AppBundle/Resources/views/Mail/delivery.html.twig
+++ b/src/AppBundle/Resources/views/Mail/delivery.html.twig
@@ -112,6 +112,29 @@
                 <tr>
                     <td colspan="2" style="font-size: 0px"><br /></td>
                 </tr>
+
+
+                <tr style="background: #FFF; padding: 10px" bgcolor="#FFF">
+                    <td style="text-align: left; width: 200px; vertical-align: top" align="left" valign="top" >
+                        <span style="display: inline-block; padding: 3px; border: 1px solid #CCC; border-radius: 3px">
+                            <a href="https://medalmanah.ru/event/dni_revmatologii_v_sankt_peterburge_kak_ostanovit_invalidizatsiju_natsii?mail" target="_blank" style="color: #f00000">
+                                <img src="https://medalmanah.ru/upload/event/1473365770.png" style="width: 160px">
+                            </a>
+                        </span>
+                    </td>
+                    <td style="text-align: left; font-size: 16px" align="left" >
+                        <span style="color: #777">15.09.2016</span><br />
+                        <div><a href="https://medalmanah.ru/event/dni_revmatologii_v_sankt_peterburge_kak_ostanovit_invalidizatsiju_natsii?mail" target="_blank" style="color: #f00000"><strong>Дни ревматологии в Санкт-Петербурге: как остановить инвалидизацию нации</strong></a></div>
+                        <p style="font-size: 10pt">Ревматические заболевания занимают одно из первых мест в «рейтинге» болезней человечества. Эти заболевания приводят к поражению суставов и внутренних органов, что превращает жизнь больного в непрерывную борьбу с болью и потерей подвижности. Ранняя инвалидизация, потеря трудоспособности и преждевременная смерть – таков исход заболевания, если вовремя не начать лечение.</p>
+                    </td>
+                </tr>
+                <tr>
+                    <td colspan="2" style="font-size: 0px"><br /></td>
+                </tr>
+
+
+
+
                 <tr style="background: #FFF; padding: 10px" bgcolor="#FFF">
                     <td style="text-align: left; width: 200px; vertical-align: top" align="left" valign="top" >
                         <span style="display: inline-block; padding: 3px; border: 1px solid #CCC; border-radius: 3px">
@@ -129,24 +152,24 @@
                 <tr>
                     <td colspan="2" style="font-size: 0px"><br /></td>
                 </tr>
-                <tr style="background: #FFF" bgcolor="#FFF">
-                    <td style="text-align: left; width: 200px; vertical-align: top" align="left" valign="top" >
-                        <span style="display: inline-block; padding: 3px; border: 1px solid #CCC; border-radius: 3px">
-                            <a href="https://medalmanah.ru/event/mezhdunarodnyj_kongress_i_5_ja_nauchno_prakticheskaja_shkola_iasgo_dostizhenija_sovremennoj_gepatopankreatobiliarnoj_hirurgii_hirurgii_pischevaritelnogo_trakta_i_transplantologii?mail" target="_blank" style="color: #f00000">
-                                <img src="https://medalmanah.ru/upload/event/1468421381.png" style="width: 160px">
-                            </a>
-                        </span>
-                    </td>
-                    <td style="text-align: left; font-size: 16px" align="left" >
-                        <span style="color: #777">23.09.2016 - 24.09.2016</span><br />
-                        <div><a href="https://medalmanah.ru/event/mezhdunarodnyj_kongress_i_5_ja_nauchno_prakticheskaja_shkola_iasgo_dostizhenija_sovremennoj_gepatopankreatobiliarnoj_hirurgii_hirurgii_pischevaritelnogo_trakta_i_transplantologii?mail" target="_blank" style="color: #f00000"><strong>Международный конгресс и 5-я Научно-практическая школа IASGO “Достижения современной гепатопанкреатобилиарной хирургии, хирургии пищеварительного тракта и трансплантологии”</strong></a></div>
-                        <p style="font-size: 10pt">Мероприятие пройдет при поддержке Международной ассоциации хирургов, гастроэнтерологов и онкологов (IASGO) и Министерства здравоохранения Российской Федерации.
-                            Конгресс пройдет при активном участии российских и зарубежных лидеров хирургии, трансплантологии, онкологии, лучевой диагностики, реаниматологии.</p>
-                    </td>
-                </tr>
-                <tr>
-                    <td colspan="2" style="font-size: 0px"><br /></td>
-                </tr>
+                {#<tr style="background: #FFF" bgcolor="#FFF">#}
+                    {#<td style="text-align: left; width: 200px; vertical-align: top" align="left" valign="top" >#}
+                        {#<span style="display: inline-block; padding: 3px; border: 1px solid #CCC; border-radius: 3px">#}
+                            {#<a href="https://medalmanah.ru/event/mezhdunarodnyj_kongress_i_5_ja_nauchno_prakticheskaja_shkola_iasgo_dostizhenija_sovremennoj_gepatopankreatobiliarnoj_hirurgii_hirurgii_pischevaritelnogo_trakta_i_transplantologii?mail" target="_blank" style="color: #f00000">#}
+                                {#<img src="https://medalmanah.ru/upload/event/1468421381.png" style="width: 160px">#}
+                            {#</a>#}
+                        {#</span>#}
+                    {#</td>#}
+                    {#<td style="text-align: left; font-size: 16px" align="left" >#}
+                        {#<span style="color: #777">23.09.2016 - 24.09.2016</span><br />#}
+                        {#<div><a href="https://medalmanah.ru/event/mezhdunarodnyj_kongress_i_5_ja_nauchno_prakticheskaja_shkola_iasgo_dostizhenija_sovremennoj_gepatopankreatobiliarnoj_hirurgii_hirurgii_pischevaritelnogo_trakta_i_transplantologii?mail" target="_blank" style="color: #f00000"><strong>Международный конгресс и 5-я Научно-практическая школа IASGO “Достижения современной гепатопанкреатобилиарной хирургии, хирургии пищеварительного тракта и трансплантологии”</strong></a></div>#}
+                        {#<p style="font-size: 10pt">Мероприятие пройдет при поддержке Международной ассоциации хирургов, гастроэнтерологов и онкологов (IASGO) и Министерства здравоохранения Российской Федерации.#}
+                            {#Конгресс пройдет при активном участии российских и зарубежных лидеров хирургии, трансплантологии, онкологии, лучевой диагностики, реаниматологии.</p>#}
+                    {#</td>#}
+                {#</tr>#}
+                {#<tr>#}
+                    {#<td colspan="2" style="font-size: 0px"><br /></td>#}
+                {#</tr>#}
             </table>
         </td>
     </tr>
