--- a/src/AppBundle/Resources/views/Calendar/calendar_event.html.twig
+++ b/src/AppBundle/Resources/views/Calendar/calendar_event.html.twig
@@ -1,8 +1,8 @@
 {% extends '@App/layout.html.twig' %}
 
 {% block seo %}
-    <title>{{ calendar.title }} | medalmanah.ru</title>
-    <meta name="description" content="{{ calendar.anons|raw }}"/>
+    <title>{{ calendar.title }} на сайте Альманах медицинских событий</title>
+    <meta name="description" content="{{ calendar.anons | raw }}"/>
     <meta name="keywords" content="Исторические медицинские события, празники, дни памяти "/>
 {% endblock %}
 
